tests/baselines/reference/inheritanceGrandParentPrivateMemberCollisionWithPublicMember.errors.txt
==== tests/cases/compiler/inheritanceGrandParentPrivateMemberCollisionWithPublicMember.ts (1 errors) ====
    class A {
        private myMethod() { }
    }
    
    class B extends A { }
    
    class C extends B {
          ~
!!! error TS2141: Class 'C' cannot extend class 'B':
!!! 	Property 'myMethod' defined as public in type 'C' is defined as private in type 'A'.
        public myMethod() { }
    }
    